# labs-375-stac-geoparquet-backend

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  cdk.json  docker-compose.yml  main.py  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
data/: collections.json  load-sentinel-2-l2a.sh
docs/: blog-post.md  index.md  planning.md
docs/katas/: 0_full_scan.ipynb  1_needle_heystack.ipynb  8_planetary_computer.ipynb  9_misc.ipynb  index.md  labs_375.py
infrastructure/aws/: .env.local  app.py  config.py
infrastructure/aws/lambda/: Dockerfile  handler.py
infrastructure/aws/stacks/: app.py  infra.py
infrastructure/aws/stacks/constructs/: bucket.py  geoparquet_api_lambda.py  vpc.py
presentations/: 2025-02-19-team-week.html  index.html
scripts/: dev  format  install  lint  load-pgstac  pgstac-ingest  release  validate
src/stac_fastapi/geoparquet/: client.py  main.py  search.py  settings.py
src/tistac/: app.py  backend.py  constants.py  dependencies.py  item_collection.py  main.py  pgstac.py  router.py  search.py  settings.py  stac_geoparquet.py
src/tistac/backends/: __init__.py  pgstac.py  stac_geoparquet.py
src/tistac/models/: __init__.py  collection.py  item_collection.py  link.py  page.py  root.py  search.py
tests/: conftest.py  test_root.py  test_search.py
