[project]
name = "labs-375"
version = "0.0.0"
description = "Test the performance of stac-fastapi-geoparquet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["stac-fastapi-geoparquet", "rustac"]

[project.optional-dependencies]
lambda = ["mangum==0.19.0"]

[dependency-groups]
deploy = [
    "aws-cdk-lib>=2.130.0",
    "constructs>=10.3.0",
    "eoapi-cdk>=8.0.2",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.8.0",
]
dev = [
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.7",
    "mypy>=1.15.0",
    "pygithub>=2.6.1",
    "ruff>=0.9.10",
]
katas = ["ipykernel>=6.29.5", "pystac-client>=0.8.5"]

[tool.mypy]
strict = true
files = ["src/**/*.py", "infrastructure/**/*.py"]
exclude = ["infrastructure/aws/cdk.out/.*"]

[[tool.mypy.overrides]]
module = ["stac_fastapi.*", "config", "magnum"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.sources]
stac-fastapi-geoparquet = { git = "https://github.com/stac-utils/stac-fastapi-geoparquet", rev = "5d8b44423bb98b875a78312646ff76fe6823076d" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
