[project]
name = "labs-375"
version = "0.0.0"
description = "Test the performance of stac-fastapi-geoparquet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stac-fastapi-geoparquet==0.0.2",
    "rustac>=0.7.0",
    "pypgstac>=0.9.6",
    "psycopg[pool]>=3.2.6",
]

[project.optional-dependencies]
lambda = ["mangum==0.19.0"]

[dependency-groups]
deploy = [
    "aws-cdk-lib>=2.130.0",
    "constructs>=10.3.0",
    "eoapi-cdk>=8.0.2",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.8.0",
]
dev = [
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.7",
    "mypy>=1.15.0",
    "pygithub>=2.6.1",
    "ruff>=0.9.10",
]
katas = [
    "adlfs>=2024.12.0",
    "dask[dataframe]>=2025.4.1",
    "cql2>=0.3.6",
    "duckdb>=1.2.2",
    "fsspec>=2025.3.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "planetary-computer>=1.0.0",
    "pyarrow>=20.0.0",
    "pystac-client>=0.8.5",
    "tqdm>=4.67.1",
]

[tool.mypy]
strict = true
files = ["src/**/*.py", "infrastructure/**/*.py"]
exclude = ["infrastructure/aws/cdk.out/.*"]

[[tool.mypy.overrides]]
module = ["stac_fastapi.*", "config", "magnum"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
